--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@portabletext/react": "^1.0.6",
+    "@sanity/image-url": "^1.0.1",
+    "javascript-time-ago": "^2.5.7",
     "next": "latest",
+    "next-auth": "^4.10.3",
+    "next-sanity": "^0.8.4",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-hot-toast": "^2.3.0",
+    "react-time-ago": "^7.2.1",
+    "react-twitter-embed": "^4.0.4",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
